<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_task"
        android:icon="@drawable/ic_add_task_themed"
        android:title="@string/action_new_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_deleted_tasks"
        android:title="Tarefas Excluídas"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_by_importance_group"
        android:title="@string/sort_by_importance"
        android:icon="@drawable/ic_sort_themed"
        app:showAsAction="ifRoom">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/action_sort_more_important_first"
                android:title="@string/sort_more_important_first" />
            <item
                android:id="@+id/action_sort_less_important_first"
                android:title="@string/sort_less_important_first" />
        </group>
    </menu>
</item>

    </menu>
